[TASK] Added Basic Multi Language Support for Frontend and Import

--- a/Resources/Private/Backend/Partials/BackendTabs/categories.html
+++ b/Resources/Private/Backend/Partials/BackendTabs/categories.html
@@ -1,5 +1,3 @@
-<h1>Categorien</h1>
-
 <table id="categories" class="tx_cfcookiemanager">
     <thead>
     <tr>
@@ -16,14 +14,15 @@
             <td>
                 <f:if condition="{cookieCartegories.category.cookieServices -> f:count()} == 0">
                     <f:then>
-                        <p style="color:red;">Missing Configuration  {cookieCartegories.category.cookieServices -> f:count()} Services</p>
+                        <p style="color:red;">Missing Configuration {cookieCartegories.category.cookieServices ->
+                            f:count()} Services</p>
                     </f:then>
                     <f:else>
                         <p>{cookieCartegories.category.cookieServices -> f:count()} Services linked</p>
                     </f:else>
                 </f:if>
             </td>
-            <td> <a class="btn btn-default" href="{cookieCartegories.linkEdit}">Edit</a></td>
+            <td><a class="btn btn-default" href="{cookieCartegories.linkEdit}">Edit</a></td>
         </tr>
     </f:for>
     </tbody>
