--- a/Resources/Private/Backend/Partials/BackendTabs/services.html
+++ b/Resources/Private/Backend/Partials/BackendTabs/services.html
@@ -6,7 +6,7 @@
         </th>
         <th> Error</th>
         <th> Suggestion</th>
-        <th> edit</th>
+        <th> Edit</th>
     </tr>
     </thead>
     <tbody>
