--- a/Resources/Private/Backend/Partials/BackendTabs/settings.html
+++ b/Resources/Private/Backend/Partials/BackendTabs/settings.html
@@ -1,10 +1,10 @@
 <h1>Frontend Settings</h1>
-
-
 <p>
-    Cookie Frontend Settings sind für die UI Texte der Cookie box zuständig.<br> Einstellungen kannst du hier vornehmen.
+    Cookie frontend settings are responsible for the UI texts of the cookie box.<br> You can make settings here.
 </p>
 <hr>
+
+
 <table class="tx_cfcookiemanager display">
     <thead>
         <tr>
