--- a/Resources/Private/Backend/Templates/CookieSettingsBackend/Index.html
+++ b/Resources/Private/Backend/Templates/CookieSettingsBackend/Index.html
@@ -12,54 +12,53 @@
 
 <f:section name="Content">
 
-
-    <f:if condition="{firstInstall}">
-        <f:then>
-<form method="post">
-    <label>Import:
-        <select name="mainlanguage">
-            <f:for each="{languages}" as="lang">
-                <option value="{lang.twoLetterIsoCode}">{lang.title}</option>
-            </f:for>
-        </select>
-        as Main language with sys_language_uid = 0</label>
-    <button type="submit">Import</button>
-</form>
-        </f:then>
-        <f:else>
-            <div role="tabpanel">
-                <ul class="nav nav-tabs t3js-tabs" role="tablist" id="tabs-DTM-a31afc8fb616dc290e6626a9f3c9c433"
-                    data-store-last-tab="1">
-                    <f:for each="{tabs}" as="tab" iteration="iteration">
-                        <li role="presentation" class="t3js-tabmenu-item nav-item">
-                            <a href="#DTM-{tab.identifier}-1" class="nav-link   {f:if(condition:'{iteration.isFirst}', then:'active')}" title=""
-                               aria-controls="DTM-{tab.identifier}-1" role="tab" data-bs-toggle="tab">
-                                {tab.title}
-                            </a>
-                        </li>
-                    </f:for>
-                </ul>
-                <div class="tab-content">
-                    <f:for each="{tabs}" as="tab" iteration="iteration">
-                        <div role="tabpanel" class="tab-pane  {f:if(condition:'{iteration.isFirst}', then:'active')}" id="DTM-{tab.identifier}-1">
-                            <div class="panel panel-tab">
-                                <div class="panel-body">
-                                    <f:render partial="backendTabs/{tab.identifier}.html" arguments="{_all}">  </f:render>
+    <div class="module-body t3js-module-body cf_manager">
+        <f:if condition="{firstInstall}">
+            <f:then>
+                <form method="post">
+                    <label>Import:
+                        <select name="mainlanguage">
+                            <f:for each="{languages}" as="lang">
+                                <option value="{lang.twoLetterIsoCode}">{lang.title}</option>
+                            </f:for>
+                        </select>
+                        as Main language with sys_language_uid = 0</label>
+                    <button type="submit">Import</button>
+                </form>
+            </f:then>
+            <f:else>
+                <div class="typo3-TCEforms">
+                    <div role="tabpanel">
+                        <ul class="nav nav-tabs t3js-tabs" role="tablist"
+                            data-store-last-tab="1">
+                            <f:for each="{tabs}" as="tab" iteration="iteration">
+                                <li role="presentation" class="t3js-tabmenu-item nav-item">
+                                    <a href="#DTM-{tab.identifier}-1" class="nav-link   {f:if(condition:'{iteration.isFirst}', then:'active')}" title=""
+                                       aria-controls="DTM-{tab.identifier}-1" role="tab" data-bs-toggle="tab">
+                                        {tab.title}
+                                    </a>
+                                </li>
+                            </f:for>
+                        </ul>
+                        <div class="tab-content">
+                            <f:for each="{tabs}" as="tab" iteration="iteration">
+                                <div role="tabpanel" class="tab-pane  {f:if(condition:'{iteration.isFirst}', then:'active')}" id="DTM-{tab.identifier}-1">
+                                    <div class="panel panel-tab">
+                                        <div class="panel-body">
+                                            <f:render partial="backendTabs/{tab.identifier}.html" arguments="{_all}">  </f:render>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
+                            </f:for>
+
                         </div>
-                    </f:for>
-
+                    </div>
                 </div>
-            </div>
-
-        </f:else>
-    </f:if>
+            </f:else>
+        </f:if>
 
 
-
-
-
+    </div>
 
 </f:section>
 </html>
