--- a/Resources/Private/Backend/Partials/BackendTabs/home.html
+++ b/Resources/Private/Backend/Partials/BackendTabs/home.html
@@ -1,43 +1,89 @@
 <h1>CodingFreaks Cookie Manager</h1>
 
 
-
-
 <f:if condition="{autoConfigurationDone}">
+    <div class="alert  {f:if(condition: '{autoConfigurationDone.status} === done',then:'alert-success',else:'alert-info')}">
+        <div class="media">
+            <div class="media-left"><span class="fa-stack fa-lg">        <i
+                    class="fa fa-circle fa-stack-2x"></i>        <i class="fa fa-info fa-stack-1x"></i>      </span>
+            </div>
+            <div class="media-body">
+                <p class="alert-message">
+                    <strong>Autoconfiguration</strong><br>
+                    We found services<br>
+                    <br>
+                    Status: {autoConfigurationDone.status} <br>
+                    Process: {autoConfigurationDone.processBar} %<br>
+                    You can see more about the process here: <a target="_blank" href="https://cookieapi.coding-freaks.com/scan/{reportID}">Open
+                    Report</a>!
+                </p>
+         <p>&nbsp;</p>
+
+                <f:if condition="{autoConfigurationDone.status} === done">
+                    <f:form method="post" action="index">
+                        <div class="row row-cols-auto align-items-end g-3">
+                            <f:form.textfield type="hidden" value="resetScan" name="resetScan"></f:form.textfield>
+                            <f:form.textfield type="hidden" value="reset" name="target"></f:form.textfield>
+                            <div class="col">
+                                <f:form.button class="btn btn-light" type="submit">Reset autoconfiguration and make a new Scan</f:form.button>
+                            </div>
+                        </div>
+                    </f:form>
+                </f:if>
+
+            </div>
+        </div>
+    </div>
+
+
+
+</f:if>
+
+<f:if condition="{reportID}">
     <f:then>
-        <div class="alert alert-success">
+        <div class="alert">
             <div class="media">
                 <div class="media-left"><span class="fa-stack fa-lg">        <i
                         class="fa fa-circle fa-stack-2x"></i>        <i class="fa fa-info fa-stack-1x"></i>      </span>
                 </div>
                 <div class="media-body">
                     <p class="alert-message">
-                        <strong>Autoconfiguration success </strong><br>
-                        We found services<br>
+                        <strong>Autoconfiguration</strong><br>
+
                         You can see more about the process here: <a target="_blank" href="https://cookieapi.coding-freaks.com/scan/{reportID}">Open Report</a>!
                     </p>
                 </div>
             </div>
         </div>
-    </f:then>
-    <f:else>
-        <f:if condition="{reportID}">
-            <div class="alert alert-info">
-                <div class="media">
-                    <div class="media-left"><span class="fa-stack fa-lg">        <i
-                            class="fa fa-circle fa-stack-2x"></i>        <i class="fa fa-info fa-stack-1x"></i>      </span>
-                    </div>
-                    <div class="media-body">
-                        <p class="alert-message">
-                            <strong>Autoconfiguration </strong><br>
-                            We scanning your website for Services.. please wait!<br>
 
-                            You can see more about the process here: <a target="_blank" href="https://cookieapi.coding-freaks.com/scan/{reportID}">Open Report</a>!
-                        </p>
-                    </div>
+        <f:form method="post" action="index">
+            <div class="row row-cols-auto align-items-end g-3">
+                <f:form.textfield type="hidden" value="getScanStatus" name="getScanStatus"></f:form.textfield>
+                <div class="col">
+                    <f:form.button class="btn btn-light" type="submit">Get current scan status</f:form.button>
                 </div>
             </div>
-        </f:if>
-    </f:else>
-</f:if>
+        </f:form>
 
+    </f:then>
+        <f:else>
+            <f:form method="post" action="index">
+                <div class="row row-cols-auto align-items-end g-3">
+
+                    <div class="col md-6">
+                        <div class="input-group">
+                            <div class="form-control-clearable">
+                                <f:form.textfield style="width:400px;" class="form-control t3js-datetimepicker t3js-clearable flatpickr-input active" value="{scanTarget}" name="target"></f:form.textfield>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <f:form.button class="btn btn-light" type="submit">Scan URL again</f:form.button>
+                    </div>
+
+                </div>
+            </f:form>
+
+
+        </f:else>
+</f:if>
