--- a/Resources/Private/Backend/Partials/BackendTabs/settings.html
+++ b/Resources/Private/Backend/Partials/BackendTabs/settings.html
@@ -20,10 +20,11 @@
             </td>
 
             <td>
-                <a class="btn btn-default"
-                   href="{cookieService.linkEdit}">
-                   Edit
-                </a>
+
+
+                <be:link.editRecord uid="{cookieService.service.uid}"  class="btn btn-default" table="tx_cfcookiemanager_domain_model_cookiefrontend" >Edit</be:link.editRecord>
+
+
             </td>
 
         </tr>
