[TASK] Cleanup Backend Templates

--- a/Resources/Private/Backend/Layouts/Default.html
+++ b/Resources/Private/Backend/Layouts/Default.html
@@ -6,7 +6,7 @@
 <be:moduleLayout>
     <f:be.pageRenderer />
     <f:be.container
-            includeCssFiles="{0: '{f:uri.resource(path:\'Backend/Css/DataTable.css\')}'}"/>
+            includeCssFiles="{0: '{f:uri.resource(path:\'Backend/Css/DataTable.css\')}' , 1: '{f:uri.resource(path:\'Backend/Css/CookieSettings.css\')}'}"/>
 
     <be:moduleLayout.menu identifier="ModuleMenu">
         <f:comment>
