--- a/Resources/Private/Backend/Partials/BackendTabs/categories.html
+++ b/Resources/Private/Backend/Partials/BackendTabs/categories.html
@@ -16,20 +16,20 @@
     <tbody>
 
     <f:for each="{cookieCartegories}" as="cookieCartegories">
-        <tr>
-            <td>{cookieCartegories.category.title}</td>
+        <tr class="{f:if(condition: '{cookieCartegories.hidden}', then: 'hiddengray', else: 'visible')}">
+            <td>{cookieCartegories.title}</td>
             <td>
-                <f:if condition="{cookieCartegories.category.cookieServices -> f:count()} == 0">
+                <f:if condition="{cookieCartegories.cookieServices -> f:count()} == 0">
                     <f:then>
-                        <p style="color:red;">Missing Configuration {cookieCartegories.category.cookieServices -> f:count()} Services</p>
+                        <p style="color:red;">Missing Configuration {cookieCartegories.cookieServices -> f:count()} Services</p>
                     </f:then>
                     <f:else>
-                        <p>{cookieCartegories.category.cookieServices -> f:count()} Services linked</p>
+                        <p>{cookieCartegories.cookieServices -> f:count()} Services linked</p>
                     </f:else>
                 </f:if>
             </td>
             <td>
-                <be:link.editRecord uid="{cookieCartegories.category.uid}"  class="btn btn-default" table="tx_cfcookiemanager_domain_model_cookiecartegories" >Edit</be:link.editRecord>
+                <be:link.editRecord uid="{cookieCartegories.uid}"  class="btn btn-default" table="tx_cfcookiemanager_domain_model_cookiecartegories" >Edit  {f:if(condition: '{cookieCartegories.hidden}', then: 'hidden', else: '')} record</be:link.editRecord>
             </td>
         </tr>
     </f:for>
