--- a/Resources/Private/Backend/Partials/BackendTabs/services.html
+++ b/Resources/Private/Backend/Partials/BackendTabs/services.html
@@ -17,7 +17,7 @@
     </thead>
     <tbody>
     <f:for each="{cookieServices}" as="cookieService">
-        <tr>
+        <tr class="{f:if(condition: '{cookieService.service.hidden}', then: 'hiddengray', else: 'visible')}">
             <td>
                 {cookieService.service.name}
             </td>
@@ -36,7 +36,7 @@
                 {cookieService.service.categorySuggestion}
             </td>
             <td>
-                <be:link.editRecord uid="{cookieService.service.uid}"  class="btn btn-default" table="tx_cfcookiemanager_domain_model_cookieservice" >Edit</be:link.editRecord>
+                <be:link.editRecord uid="{cookieService.service.uid}"  class="btn btn-default" table="tx_cfcookiemanager_domain_model_cookieservice" >Edit  {f:if(condition: '{cookieService.service.hidden}', then: 'hidden', else: '')} record</be:link.editRecord>
             </td>
         </tr>
     </f:for>
