[TASK] Basic implementation of Recordlists for Backend Module #UI

--- a/Resources/Private/Backend/Partials/BackendTabs/home.html
+++ b/Resources/Private/Backend/Partials/BackendTabs/home.html
@@ -1,4 +1,25 @@
-<h1>CodingFreaks Cookie Manager</h1>
+
+
+<!--
+<div class=" t3js-module-body">
+    <div class="row">
+        <div class="card-header">
+            <div class="card-header-body">
+                <h1 class="card-title">CodingFreaks Cookie Manager</h1>
+                <span class="card-subtitle">Autoconfiguration and Reports from your Website</span>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col col-sm-12 col-md-12 col-xl-8">
+                todo
+        </div>
+        <div class="col col-sm-12 col-md-12 col-xl-4">
+            mybe
+        </div>
+    </div>
+</div>
+-->
 
 
 
@@ -35,9 +56,6 @@
             </div>
         </div>
     </div>
-
-
-
 </f:if>
 
 <f:if condition="{reportID}">
@@ -84,7 +102,5 @@
 
                 </div>
             </f:form>
-
-
         </f:else>
 </f:if>
