--- a/Resources/Private/Backend/Partials/BackendTabs/categories.html
+++ b/Resources/Private/Backend/Partials/BackendTabs/categories.html
@@ -1,38 +1,33 @@
 
-<div style="margin-bottom: 40px;">
-    <be:link.newRecord  class="btn btn-default"  table="tx_cfcookiemanager_domain_model_cookiecartegories" >   Create new Category </be:link.newRecord>
+<div class=" t3js-module-body">
+    <div class="row">
+        <div class="card-header">
+            <div class="card-header-body">
+                <h1 class="card-title">Category Configuration</h1>
+                <span class="card-subtitle">Groups for the Cookie services</span>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col col-sm-12 col-md-12 col-xl-8">
+            <f:format.raw>{cookieCategoryTableHTML}</f:format.raw>
+        </div>
+        <div class="col col-sm-12 col-md-12 col-xl-4">
+            <div style="margin-bottom: 40px;">
+                <be:link.newRecord  class="btn btn-default"  table="tx_cfcookiemanager_domain_model_cookiecartegories" >   Create new Category </be:link.newRecord>
+            </div>
+
+            <div class="alert alert-info">
+                <div class="media">
+                    <div class="media-left"><span class="fa-stack fa-lg">        <i class="fa fa-circle fa-stack-2x"></i>        <i class="fa fa-info fa-stack-1x"></i>      </span>
+                    </div>
+                    <div class="media-body"><p class="alert-message"><strong>Category Configuration</strong><br>
+                        Cookie Category are responsible for the Group management of the Settings Modal.<br><br>
+                        For more information, please refer to the following link: <a target="_blank" href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/Configuration/CookieCategories/Index.html">Cookie Category Configuration -></a>
+                    </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
-
-
-<table id="categories" class="tx_cfcookiemanager">
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Services</th>
-        <th>Edit</th>
-    </tr>
-    </thead>
-    <tbody>
-
-    <f:for each="{cookieCartegories}" as="cookieCartegories">
-        <tr class="{f:if(condition: '{cookieCartegories.hidden}', then: 'hiddengray', else: 'visible')}">
-            <td>{cookieCartegories.title}</td>
-            <td>
-                <f:if condition="{cookieCartegories.cookieServices -> f:count()} == 0">
-                    <f:then>
-                        <p style="color:red;">Missing Configuration {cookieCartegories.cookieServices -> f:count()} Services</p>
-                    </f:then>
-                    <f:else>
-                        <p>{cookieCartegories.cookieServices -> f:count()} Services linked</p>
-                    </f:else>
-                </f:if>
-            </td>
-            <td>
-                <be:link.editRecord uid="{cookieCartegories.uid}"  class="btn btn-default" table="tx_cfcookiemanager_domain_model_cookiecartegories" >Edit  {f:if(condition: '{cookieCartegories.hidden}', then: 'hidden', else: '')} record</be:link.editRecord>
-            </td>
-        </tr>
-    </f:for>
-    </tbody>
-</table>
-
