--- a/Resources/Public/Backend/Css/CookieSettings.css
+++ b/Resources/Public/Backend/Css/CookieSettings.css
@@ -2,4 +2,16 @@
   margin: 0 !important;
 }
 
+.actionbar {
+  display: flex;
+  justify-content: flex-end;
+}
+.actionbar button {
+  margin-left: 25px;
+}
+
+table.dataTable {
+  width: 100% !important;
+}
+
 /*# sourceMappingURL=CookieSettings.css.map */
