--- a/Resources/Public/Backend/Css/CookieSettings.css
+++ b/Resources/Public/Backend/Css/CookieSettings.css
@@ -6,12 +6,13 @@
   display: flex;
   justify-content: flex-end;
 }
-.actionbar button {
-  margin-left: 25px;
-}
 
 table.dataTable {
   width: 100% !important;
+}
+
+.description {
+  color: gray;
 }
 
 .configurationTree {
