--- a/Resources/Public/Backend/Css/CookieSettings.scss
+++ b/Resources/Public/Backend/Css/CookieSettings.scss
@@ -7,12 +7,13 @@
 .actionbar{
   display: flex;
   justify-content: flex-end;
-  button{
-    margin-left: 25px;
-  }
 }
 table.dataTable{
   width: 100% !important;
+}
+
+.description{
+  color: gray;
 }
 
 
