[TASK] UI Changes in autoconfiguration

--- a/Resources/Private/Backend/Partials/BackendTabs/autoconfiguration.html
+++ b/Resources/Private/Backend/Partials/BackendTabs/autoconfiguration.html
@@ -35,17 +35,18 @@
                 <p class="description">
                     By clicking on the Scan button, an external web scanner will scan 10 pages of your website and detect any embedded scripts, iframes, and cookies.<br>
                     These can be imported using the Import button after a successful scan.<br>
-                    Existing services will be ignored and only new services will be added if they are detected.
+                    Existing services will be ignored and only new services will be added if they are detected.<br><br>
+                    You can use a custom sitemap.xml to target the 10 Pages. (ex. {scanTarget}mysitemap.xml)
                 </p>
                 <div class="row row-cols-auto align-items-end g-3">
-                    <div class="col md-6">
+                    <div class="col md-8">
                         <div class="input-group">
                             <div class="form-control-clearable">
-                                <f:form.textfield style="width:400px;" class="form-control t3js-datetimepicker t3js-clearable flatpickr-input active" value="{scanTarget}" name="target"></f:form.textfield>
+                                <f:form.textfield placeholder="{scanTarget}mysitemap.xml" style="width:400px;" class="form-control t3js-datetimepicker t3js-clearable flatpickr-input active" value="{scanTarget}" name="target"></f:form.textfield>
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col md-4">
                         <f:form.button class="btn btn-light" type="submit">Start a new Scan</f:form.button>
                     </div>
                 </div>
