[BUGFIX] Backendmodul: template could not be loaded

--- a/Resources/Private/Backend/Templates/CookieSettingsBackend/Index.html
+++ b/Resources/Private/Backend/Templates/CookieSettingsBackend/Index.html
@@ -55,7 +55,7 @@
                                      id="DTM-{tab.identifier}-1">
                                     <div class="panel panel-tab">
                                         <div class="panel-body">
-                                            <f:render partial="backendTabs/{tab.identifier}.html"
+                                            <f:render partial="backendTabs/{tab.identifier}"
                                                       arguments="{_all}"></f:render>
                                         </div>
                                     </div>
