[TASK] Added Variable Autodetection to TCA. [TASK] Added a Counter for missing Variables in Treelist view.

--- a/Resources/Public/Backend/Css/CookieSettings.css
+++ b/Resources/Public/Backend/Css/CookieSettings.css
@@ -15,6 +15,10 @@ table.dataTable {
   color: gray;
 }
 
+.unknown-variables, .unknown-variables a {
+  color: red;
+}
+
 .configurationTree {
   padding: 5px;
   list-style: none;
