[TASK] Added Style for Frontend consent button

--- a/Resources/Private/Templates/CookieFrontend/List.html
+++ b/Resources/Private/Templates/CookieFrontend/List.html
@@ -23,7 +23,9 @@ Otherwise your changes will be overwritten the next time you save the extension 
             </f:then>
             <f:else>
                 <div class="cf-cookie-openconsent">
-                    <button type="button" data-cc="c-settings" aria-haspopup="dialog">Cookie settings</button>
+                    <a type="button" data-cc="c-settings" aria-haspopup="dialog">
+                        <f:image title="Cookie Settings" width="30" src="EXT:cf_cookiemanager/Resources/Public/Icons/Extension.svg"/>
+                    </a>
                 </div>
             </f:else>
         </f:if>
