[BUGFIX] missing Block Description | Switch effect for Category |  Filter-Categories with no category_suggestion

--- a/Resources/Public/Scss/default.css
+++ b/Resources/Public/Scss/default.css
@@ -1659,6 +1659,10 @@ div[data-service] .c-n-t a:hover {
   vertical-align: top;
 }
 
+.cc_div #cookie-wrapper .act.exp:before {
+  transform: translateY(-20%) rotate(225deg);
+}
+
 .cf-cookie-openconsent {
   position: fixed;
   bottom: 15px;
