--- a/Resources/Public/Scss/default.scss
+++ b/Resources/Public/Scss/default.scss
@@ -41,6 +41,10 @@
   }
 }
 
+.cc_div  #cookie-wrapper .act.exp:before{
+  transform: translateY(-20%) rotate(225deg);
+}
+
 .cf-cookie-openconsent{
   position: fixed;
   bottom: 15px;
